# full_stack_repo_template

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  pyproject.toml
backend/: app.py
backend/infrastructure/database/_mongodb/: _mapping.py  _models.py
backend/router/: base_routes.py  example_routes.py
backend/services/: user_management_service.py
documentation/: main.adoc
documentation/src/: manuals_and_tutorials.adoc
products/product_name/backend/: .gitignore  Dockerfile  Makefile  README.md  diff  noxfile.py  poetry.toml  pyproject.toml
products/product_name/backend/service_name/: app.py  config.py  containers.py
products/product_name/backend/service_name/controller/: auth.py  data_transfer_objects.py  example_routes.py  mapping.py  user_routes.py
products/product_name/backend/service_name/controller/authentication/: auth.py  auth_routes.py  consts.py
products/product_name/backend/service_name/controller/middleware/: LoggingMiddleware.py  __init__.py
products/product_name/backend/service_name/domain/: entities.py  exception.py  idatabase.py
products/product_name/backend/service_name/domain/repository/: IUserRepository.py  idatabase.py
products/product_name/backend/service_name/domain/service/: IAuthService.py  IUserManagementService.py
products/product_name/backend/service_name/infrastructure/: fastapi_utils.py
products/product_name/backend/service_name/infrastructure/database/: database_factory.py
products/product_name/backend/service_name/infrastructure/database/_mongodb/: _database.py  _mapping.py
products/product_name/backend/service_name/infrastructure/user_repository/: database_factory.py
products/product_name/backend/service_name/infrastructure/user_repository/_mongodb/: _mapping.py  mongo_db_user_repository.py  utils.py
products/product_name/backend/service_name/router/: user_routes.py
products/product_name/backend/service_name/service/: auth_service.py  user_management_service.py
products/product_name/frontend/: .nycrc.json  tsconfig.base.json
products/product_name/frontend/service_name/: Dockerfile  package-lock.json  package.json  tsconfig.json
(+5 files in other folders)
